re PR c++/56493 (Performance regression in google dense hashmap)

PR c++/56493
	* convert.c (convert_to_real, convert_to_expr, convert_to_complex):
	Handle COMPOUND_EXPR.

	* c-c++-common/pr56493.c: New test.

From-SVN: r218347